tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__operator_tests__path_25_craftinginterpreters_test_operator_multiply_num_nonnum_lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/multiply_num_nonnum.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
InvalidBinaryOp { lhs: Number(1.0), op: BinOp { kind: Times, token: Token { kind: Star, loc: craftinginterpreters/test/operator/multiply_num_nonnum.lox:2..3 } }, rhs: String("1"), at: Binary { lhs: Literal(Literal { kind: Number(1.0), token: Token { kind: Number, loc: craftinginterpreters/test/operator/multiply_num_nonnum.lox:0..1 } }), op: BinOp { kind: Times, token: Token { kind: Star, loc: craftinginterpreters/test/operator/multiply_num_nonnum.lox:2..3 } }, rhs: Literal(Literal { kind: String("1"), token: Token { kind: String, loc: craftinginterpreters/test/operator/multiply_num_nonnum.lox:4..7 } }) } }
