tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__operator_tests__path_31_craftinginterpreters_test_operator_subtract_lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/subtract.lox
---
success: true
exit_code: 0
----- stdout -----
1
0

----- stderr -----
